--- a/hw/LingData-HW6-lmer-comp.Rmd
+++ b/hw/LingData-HW6-lmer-comp.Rmd
@@ -43,7 +43,10 @@ In this work, you will fit a number of linear and linear mixed-effect models tha
 ### 1.1 
 Make a scatterplot of the number of consonants and the number of vowels using the `ggplot()`.   
 ```{r 1.1, echo = FALSE}
-
+ggplot(upsid, aes(x=consonants, y=vowels))+
+  geom_point()+
+  labs(title='The number of consonants and vowels')+
+  theme_bw()
 ```
 
 ```{r}
@@ -51,14 +54,15 @@ Make a scatterplot of the number of consonants and the number of vowels using th
 ```
 ### 1.2
 Fit the basic linear model `fit1` that predicts the number of vowels by the number of consonants. Look at the summary of the model.
-```{r 1.2, include=FALSE}
-# fit1 <- lm(...)
+```{r}
+fit1 <- lm(data = upsid, vowels ~ consonants)
+summary(fit1)
 ```
 
 ### 1.3
 Is `consonants` a significant predictor? Write down YES or NO.
 ```{1.3}
-
+YES
 ```
 
 ### 1.4
@@ -81,9 +85,11 @@ head(augment(fit1))
 Use one of these function to add a line to the scatterplot 1.1. You have to use `geom_line` and pass the result of `augment` or `fortify` as argument `data` in `geom_line`. (E.g. `geom_line(data = <result of augment>, ...`))
 
 ```{r 1.5, echo=FALSE}
-
-#
-#  geom_line(data = augment(fit1), aes(x = consonants, y = .fitted), color = "blue")
+ggplot(upsid, aes(x=consonants, y=vowels))+
+  geom_point()+
+  labs(title='The number of consonants and vowels')+
+  theme_bw()+
+  geom_line(data = augment(fit1), aes(x = consonants, y = .fitted), color = "blue")
 ```
 
 ## 2. Mixed-effect models
@@ -92,7 +98,11 @@ Let us look at the data with respect to the `area` groups.
 ### 2.1
 Re-build the scatterplot `1.1` coloring the points by `area`.
 ```{r 2.1, echo=FALSE}
-
+ggplot(upsid, aes(x=consonants, y=vowels, color=area))+
+  geom_point()+
+  labs(title='The number of consonants and vowels')+
+  theme_bw()+
+  stat_ellipse()
 
 # you can also draw stat_ellipse()
 ```
@@ -102,7 +112,7 @@ Use lmer() to fit the model `fit2` with random `area` group intercept. Your mode
 
 $$vowels = \beta_0 + \beta_1 \times consonants + u(area).$$
 ```{r 2.2, include=FALSE}
-
+fit2 <- lmer(data = upsid, vowels ~ consonants +(1|area), REML = FALSE)
 
 ```
 
@@ -110,16 +120,24 @@ $$vowels = \beta_0 + \beta_1 \times consonants + u(area).$$
 ### 2.3
 Add the regression lines to the scatterplot `2.1` using `fortify` or `augment` methods.
 ```{r 2.3, echo=FALSE}
+ggplot(upsid, aes(x=consonants, y=vowels, color=area))+
+  geom_point()+
+  labs(title='The number of consonants and vowels')+
+  theme_bw()+
+  geom_line(data = augment(fit2), aes(x = consonants, y = .fitted, color = area))
 
 
 ```
 
 ### 2.4
 Interpret the results of the model. (Use `summary()` to get information about your model.) Is _consonansts_ variable still significant? How it changes after we added _area_ random effect? What can you say about lines on the graph? How are they located with respect to each other? Why?
-
-```{2.4}
-
+```{r}
+summary(fit2)
 ```
+```{2.4}
+Yes, _consonansts_ variable is still significant, but its p-value increased after we added _area_ random effect. The lines are parallel because addiing a random effect sets a different intercept for each group, but does not change the coefficient of the variable.
+```
+
 
 
 ## 3. Mixed-effect models with random slopes.
@@ -130,21 +148,29 @@ $$vowels = \beta_0 + (\beta_1 + u(area))\times consonants.$$
 You can consult [this](http://bbolker.github.io/mixedmodels-misc/glmmFAQ.html#model-specification) manual to choose the correct syntax in your `lmer` formula.
 
 ```{r 3.1, include=FALSE}
-
+fit3 <- lmer(data = upsid, vowels ~ consonants +(-1+consonants|area), REML = FALSE)
 ```
 
 ### 3.2
 Draw a figure with prediction lines:
 
 ```{r 3.2, echo=FALSE}
-
+ggplot(upsid, aes(x=consonants, y=vowels, color=area))+
+  geom_point()+
+  labs(title='The number of consonants and vowels')+
+  theme_bw()+
+  geom_line(data = augment(fit3), aes(x = consonants, y = .fitted, color = area))
 ```
 
 ### 3.3
 Interpret the results. Is _constants_ still significant? Why? What can you say about lines on the graph? How are they located with respect to each other? Why?
 
-```{3.3}
+```{r}
+summary(fit3)
+```
 
+```{3.3}
+_consonants_ variable is not significant any more, because after adding random slope its p-value is now higher than significance level. The lines are no longer parallel, they are at different angles to each other, because adding random slope changed the coefficient of the variable.
 ```
 
 ## 4. Mixed-effect models with random intercept and random slopes.
@@ -156,19 +182,27 @@ $$vowels = \beta_0 + u_1(area) + (\beta_1 + u_2(area))\times consonants.$$
 Fit the model `fit4`.
 
 ```{r 4.1, include=FALSE}
-
+fit4 <- lmer(data = upsid, vowels ~ consonants +(1|area)+(0+consonants|area), REML = FALSE)
 ```
 
 ### 4.2
 Draw a figure with predictions:  
 
 ```{r 4.2, echo=FALSE}
-
+ggplot(upsid, aes(x=consonants, y=vowels, color=area))+
+  geom_point()+
+  labs(title='The number of consonants and vowels')+
+  theme_bw()+
+  geom_line(data = augment(fit4), aes(x = consonants, y = .fitted, color = area))
 ```
 
 ### 4.3
 Interpret the results. Is _constants_ significant? How can we interpret the difference between the prediction lines of these three models?
 
-```{4.3}
+```{r}
+summary(fit4)
+```
 
+```{4.3}
+_consonants_ is not significant as its p-value is higher than significance level. The last model has lines different from the first two models, since each group in it has both its own intercept and  coefficient of the variable. Therefore, the lines are not parallel, each line is differently offset along the axis and has its own slope.
 ```
